--- a/html/index.html
+++ b/html/index.html
@@ -1,189 +1,70 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Riesgos Psicosociales - Derecho a la Desconexión</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    html {
-      scroll-behavior: smooth;
-    }
-    body {
-      background-color: #f8f9fa;
-    }
-    section {
-      padding: 60px 15px;
-    }
-    .navbar-brand {
-      font-weight: bold;
-    }
-    .card {
-      background-color: #ffffff;
-      border: none;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      margin-bottom: 30px;
-    }
-  </style>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Derecho a la Desconexión</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link rel="stylesheet" href="../css/estilo.css" />
 </head>
 <body>
-
-  <!-- NAVBAR -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-    <div class="container">
-      <a class="navbar-brand" href="#">TP Derecho a la Desconexión</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="#introduccion">Introducción</a></li>
-          <li class="nav-item"><a class="nav-link" href="#riesgos">Riesgos Psicosociales</a></li>
-          <li class="nav-item"><a class="nav-link" href="#teletrabajo">Teletrabajo</a></li>
-          <li class="nav-item"><a class="nav-link" href="#desconexion">Derecho a la Desconexión</a></li>
-          <li class="nav-item"><a class="nav-link" href="#importancia">Importancia</a></li>
-          <li class="nav-item"><a class="nav-link" href="#legislacion">Legislación</a></li>
-          <li class="nav-item"><a class="nav-link" href="#conclusion">Conclusión</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <!-- PORTADA -->
   <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
-    <div class="container">
-      <h1 class="display-4">Riesgos Psicosociales</h1>
-      <p class="lead">Derecho a la Desconexión Digital en el Teletrabajo</p>
-      <p>Alumno: Juan Manuel García · Año: 2025</p>
-    </div>
+    <h1>Derecho a la Desconexión</h1>
+    <p>Riesgos Psicosociales en el Teletrabajo</p>
   </header>
 
-  <!-- SECCIONES -->
-  <main class="container">
-
-    <!-- Introducción -->
-    <section id="introduccion">
+  <main class="container my-5">
+    <section class="mb-5">
       <div class="card p-4">
-        <h2>Introducción</h2>
-        <p>El avance de las tecnologías y la expansión del teletrabajo han transformado profundamente el entorno laboral. Si bien estas herramientas permiten mayor flexibilidad, también plantean nuevos desafíos, especialmente en lo que respecta a los límites entre la vida personal y el trabajo.</p>
-        <p>Este trabajo analiza el concepto de <strong>riesgos psicosociales</strong> en el contexto laboral, con especial énfasis en el <strong>derecho a la desconexión digital</strong>, una herramienta clave para preservar la salud mental y el bienestar.</p>
+        <h2 class="mb-3">Introducción</h2>
+        <p>La tecnología y el teletrabajo han revolucionado la forma en que trabajamos, pero también han diluido los límites entre lo laboral y lo personal. Este trabajo aborda la importancia del derecho a la desconexión y sus implicancias en la salud mental.</p>
       </div>
     </section>
 
-
-
-
-
-
-    <!-- Riesgos Psicosociales -->
-    <section id="riesgos">
+    <section class="mb-5">
       <div class="card p-4">
-        <h2>¿Qué son los riesgos psicosociales?</h2>
-        <ul>
-          <li>Sobrecarga de trabajo.</li>
-          <li>Presión constante por resultados.</li>
-          <li>Falta de tiempo de descanso.</li>
-          <li>Imposibilidad de desconectar fuera del horario laboral.</li>
-        </ul>
-        <p>Estos factores pueden generar estrés, ansiedad, agotamiento y afectar el equilibrio entre la vida laboral y personal.</p>
+        <h2 class="mb-3">Cuando el trabajo afecta tu salud mental</h2>
+        <p>Los riesgos psicosociales son condiciones del entorno laboral que pueden afectar negativamente el bienestar emocional, como la sobrecarga de tareas, el aislamiento o la falta de pausas.</p>
       </div>
     </section>
 
-    <!-- Teletrabajo -->
-    <section id="teletrabajo">
+    <section class="mb-5">
       <div class="card p-4">
-        <h2>Teletrabajo y sus desafíos</h2>
-        <ul>
-          <li>Dificultad para establecer horarios fijos.</li>
-          <li>Mezcla entre espacios personales y laborales.</li>
-          <li>Interrupciones constantes.</li>
-          <li>Sensación de estar siempre disponible.</li>
-        </ul>
+        <h2 class="mb-3">Desconectar también es un derecho</h2>
+        <p>El derecho a la desconexión protege al trabajador fuera de su horario laboral, permitiendo descansar sin estar pendiente de mensajes, correos o tareas pendientes.</p>
       </div>
     </section>
 
-    <!-- Desconexión -->
-    <section id="desconexion">
+    <section class="mb-5">
       <div class="card p-4">
-        <h2>¿Qué es el derecho a la desconexión digital?</h2>
-        <p>Es la facultad del trabajador de no responder mensajes, correos o tareas fuera de su jornada laboral. Implica:</p>
-        <ul>
-          <li>Respeto al horario laboral acordado.</li>
-          <li>Tiempo libre real, sin presión laboral.</li>
-          <li>Promoción del bienestar y salud mental.</li>
-        </ul>
+        <h2 class="mb-3">Carrusel ilustrativo</h2>
+        <div id="carouselDerecho" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../imagenes/carrusel1.jpg" class="d-block w-100" alt="Desconexión digital 1" />
+            </div>
+            <div class="carousel-item">
+              <img src="../imagenes/carrusel2.jpg" class="d-block w-100" alt="Home office saludable" />
+            </div>
+            <div class="carousel-item">
+              <img src="../imagenes/carrusel3.jpg" class="d-block w-100" alt="Riesgos psicosociales" />
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselDerecho" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselDerecho" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
       </div>
     </section>
-
-    <!-- Importancia -->
-    <section id="importancia">
-      <div class="card p-4">
-        <h2>Importancia de establecer límites</h2>
-        <ul>
-          <li>Reduce el estrés crónico.</li>
-          <li>Previene el burnout.</li>
-          <li>Mejora la motivación.</li>
-          <li>Fomenta entornos laborales saludables.</li>
-        </ul>
-        <p>Los límites no son una falta de compromiso, sino una condición necesaria para el bienestar.</p>
-      </div>
-
-      <div class="card p-4 mt-3">
-        <h3>Consecuencias de no respetar la desconexión</h3>
-        <ul>
-          <li>Trastornos del sueño.</li>
-          <li>Ansiedad, depresión y desgaste emocional.</li>
-          <li>Rendimiento laboral bajo.</li>
-          <li>Problemas en relaciones personales.</li>
-        </ul>
-      </div>
-
-      <div class="card p-4 mt-3">
-        <h3>Buenas prácticas</h3>
-        <ul>
-          <li>Definir horarios y respetarlos.</li>
-          <li>Silenciar notificaciones fuera del trabajo.</li>
-          <li>Promover pausas activas.</li>
-          <li>Construir una cultura de respeto al tiempo personal.</li>
-        </ul>
-      </div>
-    </section>
-
-    <!-- Legislación -->
-    <section id="legislacion">
-      <div class="card p-4">
-        <h2>Legislación en Argentina</h2>
-        <p>La <strong>Ley N.º 27.555 de Teletrabajo</strong> establece el derecho a la desconexión para quienes trabajan de forma remota:</p>
-        <blockquote class="blockquote">
-          “La persona que trabaja bajo la modalidad de teletrabajo tendrá derecho a no ser contactada y a desconectarse de los dispositivos digitales y/o tecnologías fuera de su jornada laboral”.
-        </blockquote>
-      </div>
-    </section>
-
-    <!-- Conclusión -->
-    <section id="conclusion">
-      <div class="card p-4">
-        <h2>Conclusión</h2>
-        <p>El derecho a la desconexión digital es una herramienta esencial para proteger la salud integral de las personas. En un mundo hiperconectado, desconectarse también es una forma de cuidarse.</p>
-        <p>Es responsabilidad tanto de las empresas como de los trabajadores construir una cultura del respeto por los tiempos personales.</p>
-      </div>
-    </section>
-
-    <!-- Referencias -->
-    <section id="referencias">
-      <div class="card p-4">
-        <h2>Referencias</h2>
-        <ul>
-          <li>Ley 27.555 - Régimen Legal del Teletrabajo (Argentina).</li>
-          <li>OIT – Informes sobre salud laboral.</li>
-          <li>Ministerio de Trabajo de la Nación – Guía de teletrabajo.</li>
-        </ul>
-      </div>
-    </section>
-
   </main>
 
-  <!-- BOOTSTRAP JS -->
+  <footer class="bg-light text-center py-3 border-top">
+    <p class="mb-0">Trabajo práctico - Prácticas Profesionalizantes - 2025</p>
+  </footer>
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
