--- a/html/index.html
+++ b/html/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Derecho a la Desconexión</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/estilo.css" />
+  <link rel="stylesheet" href="../css/estilos.css" />
 </head>
 <body>
   <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
