--- a/index.html
+++ b/index.html
@@ -44,6 +44,24 @@
     </div>
   </header>
 
+
+
+
+<nav class="navegacion-trabajos">
+    <div class="nav-container">
+        <span class="nav-titulo">📚 Riesgos Psicosociales</span>
+        <div class="nav-links">
+            <a href="desconexion-digital.html" class="nav-link">🔌 Derecho a la Desconexión</a>
+            <a href="tecnoestres.html" class="nav-link">📱 Tecnoestrés</a>
+        </div>
+    </div>
+</nav>
+
+
+
+
+
+
   <!-- SECCIONES -->
   <main class="container">
 
