Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <div class="nav-container">
         <span class="nav-titulo">📚 Riesgos Psicosociales</span>
         <div class="nav-links">
-            <a href="desconexion-digital.html" class="nav-link">🔌 Derecho a la Desconexión</a>
+            <a href="index.html" class="nav-link">🔌 Derecho a la Desconexión</a>
             <a href="tecnoestres.html" class="nav-link">📱 Tecnoestrés</a>
         </div>
     </div>
