--- a/tecnoestres.html
+++ b/tecnoestres.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>✌🏼️Tecnoestrés - Riesgos Psicosociales</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
-  <link rel="stylesheet" href="../css/estilo.css" />
+  <link rel="stylesheet" href="css/estilo.css" />
 </head>
 <body>
 
