--- a/tecnoestres.html
+++ b/tecnoestres.html
@@ -728,5 +728,47 @@
   <!-- BOOTSTRAP JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<!-- Bootstrap JS  capo arrancando con js viva la patria-->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+
+<!-- Tu JavaScript personalizado -->
+<script src="js/collapse-on-scroll.js"></script>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 </body>
 </html>
