--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link small href="#introduccion">Introducción</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#contexto">Contexto Argentino</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#riesgos">Riesgos Psicosociales</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#estadisticas">Estadísticas</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#teletrabajo">Teletrabajo</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#desconexion">Derecho a la Desconexión</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#marco-legal">Marco Legal</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#implementacion">Implementación</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#casos">Casos Prácticos</a></li>
-          <li class="nav-item"><a class="nav-link small" href="#conclusion">Conclusión</a></li>
+          <li class="nav-item"><a class="nav-link" href="#introduccion">Introducción</a></li>
+          <li class="nav-item"><a class="nav-link" href="#contexto">Contexto Argentino</a></li>
+          <li class="nav-item"><a class="nav-link" href="#riesgos">Riesgos Psicosociales</a></li>
+          <li class="nav-item"><a class="nav-link" href="#estadisticas">Estadísticas</a></li>
+          <li class="nav-item"><a class="nav-link" href="#teletrabajo">Teletrabajo</a></li>
+          <li class="nav-item"><a class="nav-link" href="#desconexion">Derecho a la Desconexión</a></li>
+          <li class="nav-item"><a class="nav-link" href="#marco-legal">Marco Legal</a></li>
+          <li class="nav-item"><a class="nav-link" href="#implementacion">Implementación</a></li>
+          <li class="nav-item"><a class="nav-link" href="#casos">Casos Prácticos</a></li>
+          <li class="nav-item"><a class="nav-link" href="#conclusion">Conclusión</a></li>
         </ul>
       </div>
     </div>
