--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">Derecho a la Desconexión</a>
+     
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -44,7 +44,7 @@
   <!-- PORTADA -->
   <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
     <div class="container">
-      <h1 class="display-4">Riesgos Psicosociales y Derecho a la Desconexión Digital</h1>
+      <h1 class="display-4"><strong>Derecho a la Desconexión Digital</strong></h1>
       <p class="lead">Marco Legal y Realidad Laboral en Argentina</p>
       <p class="mb-1"><strong> Juan Manuel García </strong></p>
       <p class="mb-1"><strong>Año:</strong> 2025</p>
