--- a/tecnoestres.html
+++ b/tecnoestres.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>✌🏼️Tecnoestrés - Riesgos Psicosociales</title>
+  <title>✌🏼️Tecnoestrés </title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="css/estilo.css" />
 </head>
@@ -12,7 +12,7 @@
   <!-- NAVBAR -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
     <div class="container">
-      <a class="navbar-brand" href="#">TP Riesgos Psicosociales</a>
+     
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -36,7 +36,7 @@
   <!-- PORTADA -->
   <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
     <div class="container">
-      <h1 class="display-4">Riesgos Psicosociales: Tecnoestrés</h1>
+      <h1 class="display-4"><strong>Tecnoestrés</strong></h1>
       <p class="lead">Ansiedad y estrés generados por la hiperconectividad y la necesidad de estar siempre disponible</p>
       <p class="mb-1"><strong>Juan Manuel García</strong></p>
       <p class="mb-1"><strong>Año:</strong> 2025</p>
