Actualizar index.html

--- a/index.html
+++ b/index.html
@@ -726,7 +726,48 @@
     </div>
   </footer>
 
-  <!-- BOOTSTRAP JS -->
+
+
+
+
+
+
+
+
+
+
+  <!-- BOOTSTRAP JS 
+  
+  
+  sirve para incluir el JavaScript de Bootstrap versión 5.3.3 en tu página web. Más específicamente:
+
+⸻
+
+ ¿Qué incluye ese archivo?
+
+bootstrap.bundle.min.js es la versión comprimida (“min”) del archivo bundle de Bootstrap, que contiene:
+	1.	Las funcionalidades JavaScript de Bootstrap, como:
+	•	collapse (menús plegables)
+	•	modal (ventanas emergentes)
+	•	carousel (carruseles)
+	•	tooltip, popover, dropdown, etc.
+	2.	Popper.js, que es una librería necesaria para posicionar cosas como tooltips y dropdowns.
+
+  
+  ¿Qué hace cdn.jsdelivr.net?
+
+Es una red de distribución de contenido (CDN) gratuita y rápida que te permite incluir Bootstrap sin descargar nada. Simplemente enlazás el archivo desde ahí.
+
+⸻
+
+En resumen
+
+Incluyendo ese <script>, le estás dando a tu página las herramientas necesarias para que los componentes interactivos de Bootstrap funcionen como deberían.
+  
+  
+  
+  
+  -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
 
