--- a/index.html
+++ b/index.html
@@ -39,20 +39,17 @@
   </nav>
 
 
-
-
-  <!-- PORTADA -->
-  <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
-    <div class="container">
-      <h1 class="display-4"><strong>Derecho a la Desconexión Digital</strong></h1>
-      <p class="lead">Marco Legal y Realidad Laboral en Argentina</p>
-      <p class="mb-1"><strong> Juan Manuel García </strong></p>
-      <p class="mb-1"><strong>Año:</strong> 2025</p>
-      <p><strong>Enfoque:</strong> Análisis de la Ley N° 27.555 y su impacto en el bienestar laboral</p>
-    </div>
-  </header>
-
-
+<!-- PORTADA -->
+<header class="hero-section">
+  <div class="overlay"></div> <!-- Capa semitransparente -->
+  <div class="container position-relative">
+    <h1 class="display-4"><strong>Derecho a la Desconexión Digital</strong></h1>
+    <p class="lead">Marco Legal y Realidad Laboral en Argentina</p>
+    <p class="mb-1"><strong> Juan Manuel García </strong></p>
+    <p class="mb-1"><strong>Año:</strong> 2025</p>
+    <p><strong>Enfoque:</strong> Análisis de la Ley N° 27.555 y su impacto en el bienestar laboral</p>
+  </div>
+</header>
 
 
 <nav class="navegacion-trabajos">
