--- a/tecnoestres.html
+++ b/tecnoestres.html
@@ -34,7 +34,7 @@
   </nav>
 
   <!-- PORTADA -->
-  <header class="bg-primary text-white text-center" style="padding: 120px 15px;">
+  <header class="hero-section2" >
     <div class="container">
       <h1 class="display-4"><strong>Tecnoestrés</strong></h1>
       <p class="lead">Ansiedad y estrés generados por la hiperconectividad y la necesidad de estar siempre disponible</p>
