--- a/index.html
+++ b/index.html
@@ -784,14 +784,14 @@ Incluyendo ese <script>, le estás dando a tu página las herramientas necesaria
 <!-- Bootstrap JS  capo arrancando con js viva la patria-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
-<!-- Tu JavaScript personalizado -->
+<!-- JavaScript personalizado -->
 <script src="js/collapse-on-scroll.js"></script>
 
 
 
 
 
-
+/* boton que aparece al llegar al final de pag*/
 <button id="btnInicio" onclick="scrollToTop()">↑ Inicio</button>
 
 
