--- a/index.html
+++ b/index.html
@@ -761,7 +761,7 @@ En resumen
 
 Incluyendo ese <script>, le estás dando a tu página las herramientas necesarias para que los componentes interactivos de Bootstrap funcionen como deberían.
   
-  
+  este es el bootstrap actual
   
   
   -->
@@ -781,8 +781,9 @@ Incluyendo ese <script>, le estás dando a tu página las herramientas necesaria
 
 
 
-<!-- Bootstrap JS  capo arrancando con js viva la patria-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+<!-- Bootstrap JS  capo arrancando con js viva la patria
+ linea vieja es bootstrap anterior
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script> -->
 
 <!-- JavaScript personalizado -->
 <script src="js/collapse-on-scroll.js"></script>
@@ -791,7 +792,7 @@ Incluyendo ese <script>, le estás dando a tu página las herramientas necesaria
 
 
 
-/* boton que aparece al llegar al final de pag*/
+<!-- ./* boton que aparece al llegar al final de pag*/ -->
 <button id="btnInicio" onclick="scrollToTop()">↑ Inicio</button>
 
 
